syntax = "proto3";
package div;

option go_package = "./";

message Request {
    float number1 = 1;
    float number2 = 2;
}

message Response {
    float div = 1;
}

service DivService {
    rpc Div2Numbers(Request) returns (Response) {}
}
