syntax = "proto3";
package mul;

option go_package = "./";

message Request {
    float number1 = 1;
    float number2 = 2;
}

message Response {
    float mul = 1;
}

service MulService {
    rpc Mul2Numbers(Request) returns (Response) {}
}
