syntax = "proto3";
package sub;

option go_package = "./";

message Request {
    float number1 = 1;
    float number2 = 2;
}

message Response {
    float sub = 1;
}

service SubService {
    rpc Sub2Numbers(Request) returns (Response) {}
}
